# SelfworkHR-Assistant

./: .gitignore
HR_Assistant/: README.md  chainlit.md  pyproject.toml
HR_Assistant/.chainlit/: config.toml
HR_Assistant/.chainlit/translations/: it.json
HR_Assistant/hr_assistant/: __init__.py  config.py  database.py  document_processor.py  semantic_chunking.py  utils.py
HR_Assistant/public/: style.css  theme.json
HR_Assistant/resumes/: curriculum-marketing.txt  cv-modder.txt  giornalista_tech.docx
