[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Gianluigi Ribezzo",email = "gianluigiribezzo3582@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "chromadb (>=1.5,<2.0.0)",
    "openai (>=1.59.9,<2.0.0)",
    "chainlit (>=2.0.5,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
