[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Gianluigi Ribezzo",email = "gianluigiribezzo3582@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "chromadb (>=1.5,<2.0.0)",
    "openai (>=1.59.9,<2.0.0)",
    "chainlit (>=2.0.5,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-openai (>=0.3.2,<0.4.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "numpy (>=2.5.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
